# ArmoniK.Gui.CLI

./: README.md  bitest.py  filter.py  larkfilter.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish.yaml
docs/: conf.py  index.rst  installation.rst
docs/_static/: custom.css
src/armonik_cli/: __init__.py  admin.py  cli.py  console.py  errors.py  exceptions.py  settings.py  utils.py
src/armonik_cli/commands/: __init__.py  common.py  config.py  partitions.py  results.py  session.py  sessions.py  tasks.py
src/armonik_cli/core/: __init__.py  config.py  console.py  decorators.py  filter_grammar.jinja  filters.py  options.py  params.py  serialize.py  settings.py
tests/: argparse_test.py  conftest.py  integrations_test.py  test_admin.py  test_cli.py  test_errors.py
tests/commands/: test_config.py  test_partitions.py  test_results.py  test_session.py  test_tasks.py
tests/core/: test_decorators.py  test_filters.py  test_options.py  test_params.py  test_serialize.py
tests/outputs/: sessions_list.txt
tests/unit/: test_hello.py
